creation view template

--- a/app/templates/new-dude-template.hbs
+++ b/app/templates/new-dude-template.hbs
@@ -3,5 +3,7 @@
     <br>
     Greeting: <input type="text" name="greeting" id="greetingInput" />
     <br>
+    <div id="inlineDatePicker"></div>
+    <input type="hidden" name="date" id="dateInput" />
     <input type="submit" value="submit">
 </form>
