--- a/app/templates/dude-preview-template.hbs
+++ b/app/templates/dude-preview-template.hbs
@@ -1,6 +1,7 @@
-<p class="dudePreview">
-    {{formattedDate}}-
+<a data-date="{{URLdate}}" data-dude="{{dude}}" href="#" class="dudePreview">
+    <i>{{formattedDate}}</i>
+    <br>
     {{dude}}
     <br>
     {{greeting}}
-</p>
+</a>
