isolated controller/model for mongo server

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,3 +16,10 @@ body{
         color: pink;
     }
 }
+
+
+#dude-photo, .dude-photo{
+width: 400px;
+border: gray solid 1px;
+text-align: center;
+}
