--- a/app/templates/new-dude-template.hbs
+++ b/app/templates/new-dude-template.hbs
@@ -9,8 +9,6 @@
 {{!--     <input type="file" name="photo" id="photoInput" />
  --}}    <br>
     <input id="fileupload" type="file" name="photo" required>
-    <input type="submit" value="Submit" name="submit" id="upload_btn">
-</form>
 
 
 <div id="progress" class="progress">
@@ -18,5 +16,7 @@
 </div>
 
 <div id="displayImage">
-    <img id="uploadedImage" src="/images/placeholder.jpg" width="300">
+    <img id="imagePreview" src="/images/placeholder.jpg" width="300">
 </div>
+    <input type="submit" value="Submit" name="submit" id="upload_btn">
+</form>
