delete route working

--- a/app/templates/app.hbs
+++ b/app/templates/app.hbs
@@ -1,5 +1,9 @@
 <div id="container">
     App Template
+    <div id="menu">
+        <a href="#" id="homeBtn">Home</a> |
+        <a href="#" id="newDudeBtn">New Dude</a> |
+        <a href="#" id="allDudesBtn">All Dudes</a> |
     <div id="main">
 
     </div>
