--- a/app/templates/edit-dude-template.hbs
+++ b/app/templates/edit-dude-template.hbs
@@ -25,3 +25,6 @@
 </div>
     <input type="submit" value="Submit" name="submit" id="upload_btn">
 </form>
+<p>
+    <a href="#" id="deleteDudeBtn">DELETE DUDE</a>
+</p>
