--- a/app/templates/app-template.hbs
+++ b/app/templates/app-template.hbs
@@ -1,5 +1,5 @@
 <div id="container">
-    App Template
+    App Template, Yo
     <div id="menu">
         <a href="#" id="homeBtn">Home</a> |
         <a href="#" id="newDudeBtn">New Dude</a> |
@@ -7,4 +7,9 @@
     <div id="main">
 
     </div>
+</div>
+<div id="dialogError" title="Error, Yo" style="display: none">
+    <p id="dialogErrorContent">
+    </p>
+</div>
 </div>
