creating thumb on creation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,10 @@ body{
     &:hover{
         color: pink;
     }
+    .dudePreviewThumb{
+        height: 50px;
+        float: right;
+    }
 }
 
 
