can edit only thumb

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,6 +21,16 @@ body{
     }
 }
 
+#thumbPreview{
+    width: 100px;
+}
+
+.form-sep{
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+
 
 #dude-photo, .dude-photo{
 width: 400px;
