--- a/app/templates/dude-template.hbs
+++ b/app/templates/dude-template.hbs
@@ -11,13 +11,12 @@
         {{ else }}
             no photo
         {{/if}}
-        {{#if thumb}}
-            <br>
-            <img id="dude-thumb" src="{{thumb}}">
-        {{/if}}
     {{ else }}
         <h1>Not found</h1>
     {{/if}}
+    <div id="dudePhotos">
+        sub-photos
+    </div>
     <p>
         <a href="#" id="editDudeBtn">EDIT</a>
     </p>
