canvas save to express

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -37,3 +37,20 @@ width: 400px;
 border: gray solid 1px;
 text-align: center;
 }
+
+#canvas{
+    border: gray solid 1px;
+    cursor: pointer;
+}
+
+
+#drawings{
+margin-top: 20px;
+margin-left: -10px;
+}
+
+.drawing{
+width: 200px;
+margin: 10px;
+border: gray solid 1px;
+}
